# sepgfx

./: .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json
include/sf/gfx/: camera.h  meshes.h  shaders.h  textures.h  window.h
sample_shaders/: default.frag
src/: camera.c  meshes.c  shaders.c  textures.c  window.c
tests/: gl.c  window.c
